--- a/README.org
+++ b/README.org
@@ -149,6 +149,7 @@ We run our own substitution server. Add the key to your machine as
 root with
 
 : guix archive --authorize < tux02-guix-substitutions-public-key.txt
+: guix build -L ~/guix-bioinformatics/ -L ~/guix-past/modules/ genenetwork2 --substitute-urls="https://ci.guix.gnu.org https://bordeaux.guix.gnu.org https://guix.genenetwork.org" --dry-run
 
 * LICENSE
 
