--- a/README.org
+++ b/README.org
@@ -1,5 +1,7 @@
 * guix-bioinformatics
 
+IMPORTANT: this repository has moved to https://git.genenetwork.org/guix-bioinformatics/!
+
 Bioinformatics packages for GNU Guix that are used in
 https://genenetwork.org/ and some other places.  See [[https://gitlab.com/pjotrp/guix-notes/blob/master/HACKING.org][Guix notes]] for
 installing and hacking GNU Guix. Other channels of bioinformatics
